Fix project details dialog overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -279,9 +279,11 @@ span[class*="blinkingCursor"] {
   padding: 1.5rem;
   width: 90%;
   max-width: 600px;
+  max-height: 90%;
   color: var(--text);
   position: relative;
   box-shadow: 8px 8px var(--accent-dark);
+  overflow-y: scroll;
 }
 
 .modal-close {
